WGD-1955 Contact to case coversion - Issues with the ID (visual ID)

--- a/src/app/shared/xt-forms/components/form-input/form-input.component.less
+++ b/src/app/shared/xt-forms/components/form-input/form-input.component.less
@@ -40,3 +40,13 @@
     }
 
 }
+
+.refresh-icon {
+    display: inline !important;
+    line-height: 0;
+    float: right;
+    margin-top: -12px;
+    margin-right: 25px;
+    position: relative;
+    cursor: pointer;
+}
