--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -219,16 +219,6 @@ html, body, ul, li, div, span {
         margin-top: 7px;
     }
 
-    .refresh-icon {
-        display: inline !important;
-        line-height: 0;
-        float: right;
-        margin-top: -12px;
-        margin-right: 25px;
-        position: relative;
-        cursor: pointer;
-    }
-
     ng-select {
         .ng-select-container {
             padding-right: 24px;
